# openmesa

./: .env.example  .gitignore  CHANGELOG.md  README.md  biome.json  commitlint.config.js  docker-compose.yml  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: dependabot.yml
agents/code/: README.md
agents/mesa/: README.md
agents/research/: README.md
apps/console/: next.config.ts  package.json  vercel.json
apps/console/src/app/: globals.css  layout.tsx
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/docs/: .gitignore  package.json  vercel.json
apps/docs/.source/: index.ts
apps/docs/content/docs/: index.mdx
apps/mobile/: package.json
apps/web/: biome.json  components.json  next.config.ts  package.json  pnpm-lock.yaml  vercel.json
apps/www/: components.json  package.json  vercel.json
cli/code/: Cargo.toml  README.md
cli/code/src/: api.rs  main.rs  render.rs  tools.rs
cli/deimos/: Cargo.toml
cli/deimos/src/: main.rs
evals/deimos/: README.md
examples/python/: README.md
examples/typescript/: README.md
infra/: README.md
infra/docker/: README.md
infra/k8s/: README.md
models/deimos/lander/: README.md
models/deimos/orbit/: README.md
models/deimos/zero/: README.md
sdk/python/: README.md
sdk/typescript/: README.md
services/api/: README.md
services/backend/: .env.example  Dockerfile  README.md
services/backend/backend/: __main__.py  config.py  db.py  main.py  requirements.txt
tests/: README.md
(+132 files in other folders)
