[package]
name = "deimos-code"
version = "0.1.0"
edition = "2021"
description = "Deimos Code — AI coding assistant"

[[bin]]
name = "deimos-code"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
rustyline = { version = "14", features = ["derive"] }
futures-util = "0.3"
dotenvy = "0.15"
similar = { version = "2", features = ["text"] }
anyhow = "1"

[profile.release]
strip = true
opt-level = 3
