[package]
name = "deimos"
version = "0.1.0"
edition = "2024"
description = "Deimos CLI — start, stop, manage your agent"

[[bin]]
name = "deimos"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
ratatui = "0.29"
crossterm = "0.28"

[profile.release]
strip = true
opt-level = 3
